build/log/idf_py_stdout_output_29208
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\dominik.keller\Documents\GitRepos\TCU_NOVA_OBD_Test_SW\build\bootloader && C:\Espressif\tools\python\v6.0.1\venv\Scripts\python.exe C:/esp/v6.0.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x2000 C:/Users/dominik.keller/Documents/GitRepos/TCU_NOVA_OBD_Test_SW/build/bootloader/bootloader.bin"
Bootloader binary size 0x56b0 bytes. 0x950 bytes (10%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Espressif\tools\riscv32-esp-elf\esp-15.2.0_20251204\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v6.0.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/dominik.keller/Documents/GitRepos/TCU_NOVA_OBD_Test_SW/build/config -IC:/Users/dominik.keller/Documents/GitRepos/TCU_NOVA_OBD_Test_SW/main -IC:/esp/v6.0.1/esp-idf/components/esp_libc/platform_include -IC:/esp/v6.0.1/esp-idf/components/freertos/config/include -IC:/esp/v6.0.1/esp-idf/components/freertos/config/include/freertos -IC:/esp/v6.0.1/esp-idf/components/freertos/config/riscv/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -IC:/esp/v6.0.1/esp-idf/components/freertos/esp_additions/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/etm/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/modem/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/port/esp32c5/. -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/port/esp32c5/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/port/esp32c5/private_include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32c5/. -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32c5/include -IC:/esp/v6.0.1/esp-idf/components/heap/include -IC:/esp/v6.0.1/esp-idf/components/heap/tlsf -IC:/esp/v6.0.1/esp-idf/components/log/include -IC:/esp/v6.0.1/esp-idf/components/soc/include -IC:/esp/v6.0.1/esp-idf/components/soc/esp32c5 -IC:/esp/v6.0.1/esp-idf/components/soc/esp32c5/include -IC:/esp/v6.0.1/esp-idf/components/soc/esp32c5/register -IC:/esp/v6.0.1/esp-idf/components/hal/platform_port/include -IC:/esp/v6.0.1/esp-idf/components/hal/esp32c5/include -IC:/esp/v6.0.1/esp-idf/components/hal/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32c5/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32c5/include/esp32c5 -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32c5 -IC:/esp/v6.0.1/esp-idf/components/esp_common/include -IC:/esp/v6.0.1/esp-idf/components/esp_system/include -IC:/esp/v6.0.1/esp-idf/components/esp_system/port/soc -IC:/esp/v6.0.1/esp-idf/components/esp_system/port/include/riscv -IC:/esp/v6.0.1/esp-idf/components/esp_system/port/include/private -IC:/esp/v6.0.1/esp-idf/components/esp_stdio/include -IC:/esp/v6.0.1/esp-idf/components/riscv/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_gpio/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_gpio/esp32c5/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_usb/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_usb/esp32c5/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_pmu/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_pmu/esp32c5/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_ana_conv/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_ana_conv/esp32c5/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_dma/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_dma/esp32c5/include -IC:/esp/v6.0.1/esp-idf/components/lwip/include -IC:/esp/v6.0.1/esp-idf/components/lwip/include/apps -IC:/esp/v6.0.1/esp-idf/components/lwip/lwip/src/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/freertos/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/v6.0.1/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/dominik.keller/Documents/GitRepos/TCU_NOVA_OBD_Test_SW/managed_components/espressif__led_strip/include -IC:/Users/dominik.keller/Documents/GitRepos/TCU_NOVA_OBD_Test_SW/managed_components/espressif__led_strip/interface -IC:/esp/v6.0.1/esp-idf/components/esp_driver_rmt/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_rmt/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_rmt/esp32c5/include -IC:/esp/v6.0.1/esp-idf/components/esp_driver_spi/include -IC:/esp/v6.0.1/esp-idf/components/esp_pm/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_gpspi/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_gpspi/esp32c5/include -IC:/esp/v6.0.1/esp-idf/components/esp_driver_dma/include -IC:/esp/v6.0.1/esp-idf/components/esp_driver_twai/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_twai/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_twai/esp32c5/include @"C:/Users/dominik.keller/Documents/GitRepos/TCU_NOVA_OBD_Test_SW/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/dominik.keller/Documents/GitRepos/TCU_NOVA_OBD_Test_SW=. -fmacro-prefix-map=C:/esp/v6.0.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c C:/Users/dominik.keller/Documents/GitRepos/TCU_NOVA_OBD_Test_SW/main/main.c
C:/Users/dominik.keller/Documents/GitRepos/TCU_NOVA_OBD_Test_SW/main/main.c: In function 'can_rx_task':
C:/Users/dominik.keller/Documents/GitRepos/TCU_NOVA_OBD_Test_SW/main/main.c:69:25: error: implicit declaration of function 'twai_node_receive'; did you mean 'twai_node_recover'? [-Wimplicit-function-declaration]
   69 |         esp_err_t ret = twai_node_receive(s_twai, &frame, pdMS_TO_TICKS(100));
      |                         ^~~~~~~~~~~~~~~~~
      |                         twai_node_recover
C:/Users/dominik.keller/Documents/GitRepos/TCU_NOVA_OBD_Test_SW/main/main.c:88:38: error: 'twai_frame_t' has no member named 'data'
   88 |                 printf(" %02X", frame.data[i]);
      |                                      ^
ninja: build stopped: subcommand failed.
